--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 @font-face {
 	font-family: 'Tourney';
-	src: url('./assets/fonts/Tourney-VariableFont_wdth\,wght.ttf');
+	src: url('assets/fonts/Tourney-VariableFont_wdth\,wght.ttf');
 }
 
 * {
@@ -8,17 +8,17 @@
 	padding: 0;
 	box-sizing: border-box;
 
-  }
+}
 
-
-  html, body {
+html,
+body {
 	font-family: 'Tourney', sans-serif;
-	font-size: 16px;
 	background-color: #000;
 	overflow: hidden;
-  }
+}
 
-  nav {
+
+nav {
 	position: absolute;
 	top: 0;
 	left: 0;
@@ -27,34 +27,35 @@
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
-	padding: 0 50px;
-	z-index: 1000;
-  }
+	padding: 5% 15%;
+	max-width: 100%;
+	z-index: 100;
+}
 
-  nav h2 {
+nav h2 {
 	color: #fff;
-	font-size: 2rem;
-  }
+	font-size: 5rem;
+}
 
-  
-  nav ul {
+nav ul {
 	display: flex;
-  }
+}
 
-  nav ul li {
+nav ul li {
 	list-style: none;
 	margin-left: 20px;
-  }
+}
 
-  nav ul li a {
+nav ul li a {
 	text-decoration: none;
 	color: #fff;
-	font-size: 1.2rem;
-  }
+	font-size: 3rem;
+}
 
-  nav ul li a:hover {
-	color: #a265f8;
-  }
+nav ul li a:hover {
+	color: #f5d400;
+}
 
-  
-  
+#bd {
+	touch-action: none;
+}
