--- a/style.css
+++ b/style.css
@@ -59,3 +59,21 @@ nav ul li a:hover {
 #bd {
 	touch-action: none;
 }
+
+footer {
+	position: absolute;
+	bottom: 0;
+	left: 0;
+	width: 100%;
+	height: 40px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	padding: 3% 10%;
+	max-width: 100%;
+	z-index: 100;
+}
+
+footer a {
+	color: #3b3b3b;
+}
