--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 @font-face {
 	font-family: 'Tourney';
-	src: url('assets/fonts/Tourney-VariableFont_wdth\,wght.ttf');
+	src: url('assets/fonts/Tourney-VariableFont.ttf');
 }
 
 * {
