--- a/style.css
+++ b/style.css
@@ -37,22 +37,13 @@ nav h2 {
 	font-size: 5rem;
 }
 
-nav ul {
-	display: flex;
-}
-
-nav ul li {
-	list-style: none;
-	margin-left: 20px;
-}
-
-nav ul li a {
+nav a {
 	text-decoration: none;
 	color: #fff;
 	font-size: 3rem;
 }
 
-nav ul li a:hover {
+nav a:hover {
 	color: #f5d400;
 }
 
@@ -75,15 +66,13 @@ footer {
 }
 
 /* for small screens */
-@media (max-width: 768px) {
+@media (max-width: 500px) {
 	nav {
 		flex-direction: column;
 		height: 200px;
+		justify-content: center;
+		align-items: center;
 	}
-
-	nav h2 {
-		font-size: 5rem;
-	  }
 }
 
 footer a {
